--- a/src/main/DetailedView/DetailedView.fxml
+++ b/src/main/DetailedView/DetailedView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,30 +21,30 @@
       </Label>
       <Label fx:id="productCategoryLabel" layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="395.0" text="Kategori">
          <font>
-            <Font size="18.0" />
+            <Font name="SansSerif Regular" size="18.0" />
          </font>
       </Label>
       <Label fx:id="priceLabel" layoutX="335.0" layoutY="102.0" prefHeight="53.0" prefWidth="192.0" text="X:-">
          <font>
-            <Font size="36.0" />
+            <Font name="SansSerif Regular" size="36.0" />
          </font>
       </Label>
-      <Label fx:id="quantityLabel" layoutX="362.0" layoutY="164.0" text="1">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="increaseButton" layoutX="413.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#increaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="+" />
-      <Button fx:id="decreaseButton" layoutX="303.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#decreaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="-" />
       <Label layoutX="67.0" layoutY="270.0" styleClass="san-serif" text="Produktinformation:">
          <font>
-            <Font name="System Italic" size="36.0" />
+            <Font name="SansSerif Italic" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="addButton" layoutX="302.0" layoutY="209.0" mnemonicParsing="false" onMouseClicked="#addToShoppingCart" prefHeight="53.0" prefWidth="157.0" styleClass="cursor-hand" text="Köp" />
+      <Button fx:id="addButton" layoutX="288.0" layoutY="206.0" mnemonicParsing="false" onMouseClicked="#addToShoppingCart" prefHeight="58.0" prefWidth="192.0" text="Köp">
+         <styleClass>
+            <String fx:value="cursor-hand" />
+            <String fx:value="productBuyButton" />
+         </styleClass>
+         <font>
+            <Font name="SansSerif Regular" size="31.0" />
+         </font></Button>
       <TextArea fx:id="productTextArea" layoutX="67.0" layoutY="323.0" prefHeight="152.0" prefWidth="613.0" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. " wrapText="true">
          <font>
-            <Font size="18.0" />
+            <Font name="SansSerif Regular" size="18.0" />
          </font>
          <styleClass>
             <String fx:value="cursor-text" />
@@ -51,7 +52,7 @@
          </styleClass>
       </TextArea>
       <Button fx:id="exitButton" layoutX="761.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#closeDetailedView" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="Exit" />
-      <Label fx:id="unitSuffixLabel" layoutX="384.0" layoutY="164.0" text="st">
+      <Label fx:id="unitSuffixLabel" layoutX="398.0" layoutY="164.0" text="st">
          <font>
             <Font size="18.0" />
          </font>
@@ -72,5 +73,20 @@
             <Image url="@../Res/Images/favourite_input_hint.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="286.0" layoutY="155.0" onMouseClicked="#decreaseQuantity" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+         <image>
+            <Image url="@../Res/Images/minus.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="435.0" layoutY="155.0" onMouseClicked="#increaseQuantity" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+         <image>
+            <Image url="@../Res/Images/plus.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="quantityTextField" alignment="CENTER" layoutX="336.0" layoutY="161.0" prefHeight="33.0" prefWidth="56.0" text="1">
+         <font>
+            <Font name="SansSerif Regular" size="18.0" />
+         </font>
+      </TextField>
    </children>
 </fx:root>
