--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -18,9 +18,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.iMatBackendController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.iMatBackendController">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1000.0" stylesheets="@Res/styles.css">
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1050.0" stylesheets="@Res/styles.css">
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
@@ -38,11 +38,11 @@
             </Pane>
          </top>
          <left>
-            <Pane prefHeight="607.0" prefWidth="156.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+            <Pane prefHeight="667.0" prefWidth="185.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutX="4.0" layoutY="30.0" prefHeight="578.0" prefWidth="149.0" styleClass="border">
+                  <Pane layoutX="5.0" layoutY="18.0" prefHeight="649.0" prefWidth="169.0" styleClass="border">
                      <children>
-                        <Button fx:id="favouritesButton" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#onFavouritesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mina favoriter">
+                        <Button fx:id="favouritesButton" layoutX="18.0" layoutY="96.0" mnemonicParsing="false" onMouseClicked="#onFavouritesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mina favoriter">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -50,7 +50,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="offersButton" layoutX="10.0" layoutY="126.0" mnemonicParsing="false" onMouseClicked="#onOffersButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Erbjudanden">
+                        <Button fx:id="offersButton" layoutX="18.0" layoutY="140.0" mnemonicParsing="false" onMouseClicked="#onOffersButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Erbjudanden">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -58,7 +58,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="meatAndFishButton" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" onMouseClicked="#onMeatAndFishButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kött &amp; Fisk">
+                        <Button fx:id="meatAndFishButton" layoutX="18.0" layoutY="213.0" mnemonicParsing="false" onMouseClicked="#onMeatAndFishButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kött &amp; Fisk">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -66,7 +66,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="veggiesButton" layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onMouseClicked="#onVeggiesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Frukt &amp; Grönt">
+                        <Button fx:id="veggiesButton" layoutX="18.0" layoutY="257.0" mnemonicParsing="false" onMouseClicked="#onVeggiesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Frukt &amp; Grönt">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -74,7 +74,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="drinkButton" layoutX="10.0" layoutY="287.0" mnemonicParsing="false" onMouseClicked="#onDrinkButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Dryck">
+                        <Button fx:id="drinkButton" layoutX="18.0" layoutY="301.0" mnemonicParsing="false" onMouseClicked="#onDrinkButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Dryck">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -82,7 +82,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="dairyButton" layoutX="10.0" layoutY="331.0" mnemonicParsing="false" onMouseClicked="#onDairyButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mejeri">
+                        <Button fx:id="dairyButton" layoutX="18.0" layoutY="345.0" mnemonicParsing="false" onMouseClicked="#onDairyButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mejeri">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -90,7 +90,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="pantryButton" layoutX="10.0" layoutY="375.0" mnemonicParsing="false" onMouseClicked="#onPantryButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Skafferi">
+                        <Button fx:id="pantryButton" layoutX="18.0" layoutY="389.0" mnemonicParsing="false" onMouseClicked="#onPantryButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Skafferi">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -98,7 +98,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="spicesButton" layoutX="10.0" layoutY="464.0" mnemonicParsing="false" onMouseClicked="#onSpicesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kryddor">
+                        <Button fx:id="spicesButton" layoutX="18.0" layoutY="478.0" mnemonicParsing="false" onMouseClicked="#onSpicesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kryddor">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -106,7 +106,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="snacksButton" layoutX="10.0" layoutY="419.0" mnemonicParsing="false" onMouseClicked="#onSnacksButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Snacks">
+                        <Button fx:id="snacksButton" layoutX="18.0" layoutY="433.0" mnemonicParsing="false" onMouseClicked="#onSnacksButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Snacks">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -114,7 +114,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <Button fx:id="breadButton" layoutX="10.0" layoutY="508.0" mnemonicParsing="false" onMouseClicked="#onBreadButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Bröd">
+                        <Button fx:id="breadButton" layoutX="18.0" layoutY="522.0" mnemonicParsing="false" onMouseClicked="#onBreadButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Bröd">
                            <styleClass>
                               <String fx:value="categoryButtons" />
                               <String fx:value="cursor-hand" />
@@ -122,7 +122,7 @@
                            <font>
                               <Font name="SansSerif Regular" size="12.0" />
                            </font></Button>
-                        <ImageView fitHeight="58.0" fitWidth="135.0" layoutX="7.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="67.0" fitWidth="361.0" layoutX="3.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Res/Images/KATEGORIER_header.png" />
                            </image>
@@ -136,24 +136,24 @@
             <Pane prefHeight="12.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
          </bottom>
          <right>
-            <Pane prefHeight="607.0" prefWidth="275.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+            <Pane prefHeight="667.0" prefWidth="290.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <AnchorPane layoutX="4.0" layoutY="30.0" prefHeight="577.0" prefWidth="269.0" styleClass="border">
+                  <AnchorPane layoutX="8.0" layoutY="30.0" prefHeight="636.0" prefWidth="269.0" styleClass="border">
                      <children>
-                        <Button fx:id="checkoutButton" layoutX="6.0" layoutY="494.0" mnemonicParsing="false" onMouseClicked="#onCheckoutButtonPressed" prefHeight="77.0" prefWidth="251.0" style="-fx-background-color: #32FF46;" styleClass="cursor-hand" text="Till kassan" textAlignment="CENTER">
+                        <Button fx:id="checkoutButton" layoutX="8.0" layoutY="545.0" mnemonicParsing="false" onMouseClicked="#onCheckoutButtonPressed" prefHeight="77.0" prefWidth="251.0" style="-fx-background-color: #32FF46;" styleClass="cursor-hand" text="Till kassan" textAlignment="CENTER">
                            <font>
                               <Font name="SansSerif Regular" size="30.0" />
                            </font></Button>
-                        <Label fx:id="sumLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="97.0" layoutY="459.0" prefHeight="35.0" prefWidth="147.0" text="0 kr" textAlignment="RIGHT">
+                        <Label fx:id="sumLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="99.0" layoutY="510.0" prefHeight="35.0" prefWidth="147.0" text="0 kr" textAlignment="RIGHT">
                            <font>
                               <Font name="SansSerif Regular" size="24.0" />
                            </font></Label>
-                        <ScrollPane fx:id="shoppingCartScrollPane" hbarPolicy="NEVER" layoutX="3.0" layoutY="72.0" prefHeight="387.0" prefWidth="261.0" style="-fx-background-color: white;" vbarPolicy="ALWAYS">
+                        <ScrollPane fx:id="shoppingCartScrollPane" hbarPolicy="NEVER" layoutX="3.0" layoutY="72.0" prefHeight="436.0" prefWidth="261.0" style="-fx-background-color: white;" vbarPolicy="ALWAYS">
                            <content>
-                              <FlowPane fx:id="shoppingCartFlowPane" prefHeight="385.0" prefWidth="242.0" style="-fx-background-color: white;" />
+                              <FlowPane fx:id="shoppingCartFlowPane" prefHeight="436.0" prefWidth="242.0" style="-fx-background-color: white;" />
                            </content>
                         </ScrollPane>
-                        <Line endX="140.0" layoutX="108.0" layoutY="463.0" startX="-100.0" />
+                        <Line endX="140.0" layoutX="110.0" layoutY="514.0" startX="-100.0" />
                         <ImageView fitHeight="58.0" fitWidth="244.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Res/Images/KUNDVAGN_header.png" />
@@ -244,7 +244,7 @@
                      <children>
                         <Pane prefHeight="541.0" prefWidth="569.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <StackPane fx:id="myPageTabPane" prefHeight="541.0" prefWidth="565.0">
+                              <StackPane fx:id="myPageTabPane" prefHeight="595.0" prefWidth="565.0">
                                  <children>
                                     <Pane prefHeight="537.0" prefWidth="576.0" style="-fx-background-color: white;">
                                        <children>
@@ -349,7 +349,7 @@
                                     </Pane>
                                  </children>
                               </StackPane>
-                              <StackPane fx:id="orderTabPane" prefHeight="541.0" prefWidth="567.0" style="-fx-background-color: white;">
+                              <StackPane fx:id="orderTabPane" prefHeight="595.0" prefWidth="567.0" style="-fx-background-color: white;">
                                  <children>
                                     <ScrollPane prefHeight="541.0" prefWidth="549.0" style="-fx-background-color: white; -fx-background: white;">
                                        <content>
@@ -357,7 +357,7 @@
                                        </content>
                                     </ScrollPane>
                                  </children></StackPane>
-                              <StackPane fx:id="listTabPane" prefHeight="541.0" prefWidth="567.0" style="-fx-background-color: white;">
+                              <StackPane fx:id="listTabPane" prefHeight="595.0" prefWidth="567.0" style="-fx-background-color: white;">
                                  <children>
                                     <ScrollPane prefHeight="541.0" prefWidth="549.0" style="-fx-background: white; -fx-background-color: white;">
                                        <content>
@@ -366,9 +366,9 @@
                                     </ScrollPane>
                                  </children>
                               </StackPane>
-                              <StackPane fx:id="shoppingTabPane" prefHeight="541.0" prefWidth="570.0" style="-fx-background-color: white;">
+                              <StackPane fx:id="shoppingTabPane" prefHeight="595.0" prefWidth="570.0" style="-fx-background-color: white;">
                                  <children>
-                                    <SplitPane fx:id="categoryPane" dividerPositions="0.09242144177449169" orientation="VERTICAL" prefHeight="537.0" prefWidth="574.0" styleClass="split-pane-divider">
+                                    <SplitPane fx:id="categoryPane" dividerPositions="0.09242144177449169" orientation="VERTICAL" prefHeight="591.0" prefWidth="570.0" styleClass="split-pane-divider">
                                       <items>
                                         <AnchorPane maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="52.0" prefWidth="563.0">
                                              <children>
@@ -377,9 +377,9 @@
                                           </AnchorPane>
                                         <AnchorPane maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="481.0" prefWidth="570.0">
                                              <children>
-                                                <ScrollPane fx:id="productsScrollPane" layoutY="3.0" prefHeight="489.0" prefWidth="565.0">
+                                                <ScrollPane fx:id="productsScrollPane" layoutY="3.0" prefHeight="538.0" prefWidth="565.0">
                                                    <content>
-                                                      <FlowPane fx:id="productFlowPane" prefHeight="487.0" prefWidth="560.0" prefWrapLength="1000.0" rowValignment="TOP" style="-fx-background-color: white;">
+                                                      <FlowPane fx:id="productFlowPane" prefHeight="538.0" prefWidth="560.0" prefWrapLength="1000.0" rowValignment="TOP" style="-fx-background-color: white;">
                                                          <rotationAxis>
                                                             <Point3D />
                                                          </rotationAxis></FlowPane>
@@ -389,9 +389,9 @@
                                           </AnchorPane>
                                       </items>
                                     </SplitPane>
-                                    <StackPane fx:id="homePane" prefHeight="537.0" prefWidth="573.0">
+                                    <StackPane fx:id="homePane" prefHeight="578.0" prefWidth="570.0">
                                        <children>
-                                          <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: whitte;">
+                                          <Pane prefHeight="587.0" prefWidth="570.0" style="-fx-background-color: white;">
                                              <children>
                                                 <ImageView fx:id="offersImage" fitHeight="216.0" fitWidth="248.0" layoutX="60.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -403,7 +403,7 @@
                                                    </image></ImageView>
                                                 <ImageView fx:id="rightArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="522.0" layoutY="421.0" onMouseClicked="#rotateCarouselRight" pickOnBounds="true" preserveRatio="true" />
                                                 <ImageView fx:id="leftArrowImage" fitHeight="45.0" fitWidth="45.0" layoutX="3.0" layoutY="421.0" onMouseClicked="#rotateCarouselLeft" pickOnBounds="true" preserveRatio="true" />
-                                                <ScrollPane layoutX="16.0" layoutY="298.0" prefHeight="245.0" prefWidth="538.0" vbarPolicy="NEVER">
+                                                <ScrollPane layoutX="16.0" layoutY="344.0" prefHeight="245.0" prefWidth="538.0" vbarPolicy="NEVER">
                                                    <content>
                                                       <FlowPane fx:id="carouselFlowPane" prefHeight="229.0" prefWidth="621.0" rowValignment="TOP" style="-fx-background-color: white;" />
                                                    </content>
