--- a/src/main/CustomerSupport/CustomerSupport.fxml
+++ b/src/main/CustomerSupport/CustomerSupport.fxml
@@ -17,16 +17,23 @@
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
                   <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
-                  <Button fx:id="closeWindowButton" layoutX="801.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="64.0" prefWidth="143.0" text="Button" />
-                  <ImageView fitHeight="49.0" fitWidth="64.0" layoutX="809.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Res/Images/pregunta.png" />
-                     </image></ImageView>
                   <ImageView fitHeight="113.0" fitWidth="101.0" layoutX="24.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Res/Images/escape_hatch.png" />
                      </image>
                   </ImageView>
+                  <Button layoutX="829.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
+                     <graphic>
+                        <ImageView fitHeight="65.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Res/Images/question.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font name="SansSerif Bold" size="17.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
          </top>
