--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -19,12 +19,12 @@
    <graphic>
       <Pane prefHeight="58.0" prefWidth="523.0" stylesheets="@ListTitlePane.css">
          <children>
-            <Label fx:id="nameLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="nameLabel" />
-            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" text="Lägg till i kundvagn">
+            <Label fx:id="nameLabel" layoutY="16.0" prefHeight="26.0" prefWidth="144.0" styleClass="labeltext" text="Inköpslista 1" />
+            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" styleClass="buttons" text="Lägg till i kundvagn">
                <font>
                   <Font name="SansSerif Regular" size="12.0" />
                </font></Button>
-            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#removeAsSaved" text="Ta bort som iköpslista">
+            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#removeAsSaved" styleClass="buttons" text="Ta bort som iköpslista">
                <font>
                   <Font name="SansSerif Regular" size="12.0" />
                </font></Button>
